--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1.0.4
         with:
-          path: 'dist'
+          path: 'public'
 
       - name: Deploy to GitHub Pages
         id: deployment
